# doc_fn

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
.cargo/: config.toml
doc/: databrick.md  tests.md
migrations/2026-04-07-064929-0000_create_users/: up.sql
src/: http.rs  main.rs
src/api/: mod.rs
src/api/databricks/: mod.rs  table.rs
src/core/: db.rs  http.rs
src/core/auth/: mod.rs
src/db/model/: mod.rs
src/db/schema/: mod.rs
src/test/: databrick_table.rs  http.rs  mod.rs
