[package]
name = "doc_fn"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["postgres"]} 
diesel = { version = "2.2.0", features = ["postgres"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.131"