[package]
name = "doc_fn"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "form"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.211", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1.0.131"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }